--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "google-auth-library": "^2.0.2",
     "jsonwebtoken": "^8.4.0",
     "morgan": "~1.9.0"
   },
